--- a/.github/workflows/secretDeploy.yml
+++ b/.github/workflows/secretDeploy.yml
@@ -14,15 +14,12 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@master
+      - uses: actions/checkout@v2
+      #Setup nodejs and create environments.ts file
+      - uses: actions/setup-node@v2
+        with: 
+          node-version: '16'
+      - run: node server.js
         env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          supabase_publicKey: ${{ secrets.supabase_publicKey }}
-          supabase_url: ${{ secrets.supabase_url }}
-          BRANCH: gh-pages
-          FOLDER: public
-          BUILD_SCRIPT: yarn && yarn run build
+          SUPABASE_DETAILS: '${{ secrets.SUPABASE_DETAILS }}'
+        # Continue with build
